# KotlinJNICallbackDemo

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/hu/example/kotlinjnicallbackdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  GameConstants.h  native-lib.cpp  native-lib.h
app/src/main/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  DataSource.h  FFMpegExtractor.cpp  FFMpegExtractor.h  IRenderableAudio.h  Mixer.h  MusicChangedListener.h  NDKExtractor.cpp  NDKExtractor.h  Player.cpp  Player.h
app/src/main/cpp/callback/: ObserverChain.cpp  ObserverChain.h
app/src/main/cpp/utils/: logging_macros.h
app/src/main/java/hu/example/kotlinjnicallbackdemo/: AudioEngine.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/hu/example/kotlinjnicallbackdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
